# bitrixogram

./: LICENSE  README.md  pyproject.toml
examples/barleybreak/: bitrix-bot.py
examples/barleybreak/commands/: commands.py
examples/barleybreak/config/: config.py
examples/barleybreak/handlers/: barleybreak_handler.py
examples/barleybreak/keyboards/: barleybreak_keyboard.py
src/bitrixogram/: attach.py  core.py  keyboard.py
